--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "requireindex": "~1.1.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.0.3",
     "eslint": "^4.10.0",
     "mocha": "^3.1.2"
   },
