--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-sift",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Custom ESLint Rules for Sift Science",
   "keywords": [
     "eslint",
@@ -22,8 +22,8 @@
     "eslint": "^4.10.0",
     "mocha": "^3.1.2"
   },
-  "engines": {
-    "node": ">=0.10.0"
+  "peerDependencies": {
+    "eslint": ">=0.8.0"
   },
   "license": "ISC"
 }
